Adjust color theme to dark

--- a/OpenKeychain/src/main/res/layout/api_app_settings_activity.xml
+++ b/OpenKeychain/src/main/res/layout/api_app_settings_activity.xml
@@ -30,7 +30,7 @@
             android:background="?attr/colorPrimary"
             android:overScrollMode="always"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:popupTheme="@style/ThemeOverlay.AppCompat"
             tools:ignore="UnusedAttribute"
             android:transitionGroup="false"
             android:touchscreenBlocksFocus="false" />
