--- a/OpenKeychain/src/main/res/layout/full_screen_dialog_2_done_button.xml
+++ b/OpenKeychain/src/main/res/layout/full_screen_dialog_2_done_button.xml
@@ -19,7 +19,7 @@
         android:gravity="center_vertical"
         android:paddingRight="20dp"
         android:filterTouchesWhenObscured="true"
-        style="@style/Widget.AppCompat.Light.ActionBar.TabText"
+        style="@style/Widget.AppCompat.ActionBar.TabText"
         android:textAllCaps="true"
         android:textSize="14sp"
         android:text="Done (set in-code!)" />
