--- a/OpenKeychain/src/main/res/layout/view_key_activity.xml
+++ b/OpenKeychain/src/main/res/layout/view_key_activity.xml
@@ -46,7 +46,7 @@
             android:minHeight="?attr/actionBarSize"
             android:overScrollMode="always"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:popupTheme="@style/ThemeOverlay.AppCompat"
             tools:ignore="UnusedAttribute"
             android:transitionGroup="false"
             android:touchscreenBlocksFocus="false" />
