--- a/OpenKeychain/src/main/res/layout/drawer_custom_header.xml
+++ b/OpenKeychain/src/main/res/layout/drawer_custom_header.xml
@@ -11,6 +11,6 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/app_name"
-        android:textColor="@color/white"
+        android:textColor="@color/drawer_text"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
