--- a/OpenKeychain/src/main/res/layout/full_screen_dialog_done_button.xml
+++ b/OpenKeychain/src/main/res/layout/full_screen_dialog_done_button.xml
@@ -16,7 +16,7 @@
         android:gravity="center_vertical"
         android:paddingRight="16dp"
         android:paddingEnd="16dp"
-        style="@style/Widget.AppCompat.Light.ActionBar.TabText"
+        style="@style/Widget.AppCompat.ActionBar.TabText"
         android:textAllCaps="true"
         android:textSize="14sp"
         android:filterTouchesWhenObscured="true"
