--- a/OpenKeychain/src/main/res/layout/toolbar_result_decrypt.xml
+++ b/OpenKeychain/src/main/res/layout/toolbar_result_decrypt.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar_include"
     android:elevation="4dp"
-    android:background="@color/white"
+    android:background="@color/openkeychain_white"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
