--- a/OpenKeychain/src/main/res/layout/toolbar_standalone_white.xml
+++ b/OpenKeychain/src/main/res/layout/toolbar_standalone_white.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar_include"
     android:elevation="4dp"
-    android:background="@color/white"
+    android:background="@color/openkeychain_white"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
