--- a/OpenKeychain/src/main/res/layout/view_key_adv_certs_header.xml
+++ b/OpenKeychain/src/main/res/layout/view_key_adv_certs_header.xml
@@ -22,6 +22,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginRight="8dp"
         android:visibility="visible"
-        android:textColor="@android:color/darker_gray" />
+        android:textColor="@color/openkeychain_darker_gray" />
 
 </RelativeLayout>
