--- a/OpenKeychain/src/main/res/layout/create_key_start_fragment.xml
+++ b/OpenKeychain/src/main/res/layout/create_key_start_fragment.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/first_time_1"
+            android:src="@drawable/drawer_header"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1" />
 
