--- a/OpenKeychain/src/main/res/layout/preference_toolbar_activity.xml
+++ b/OpenKeychain/src/main/res/layout/preference_toolbar_activity.xml
@@ -1,5 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
+    android:layout_marginTop="@dimen/minus_statusbar_height"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
